# SmallLLM

./: .gitignore  .gitmodules  README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/smallllm/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: model_registry.json
app/src/main/java/com/example/smallllm/: MainActivity.kt
app/src/main/java/com/example/smallllm/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/java/com/smallllm/: MainActivity.kt  SmallLlmApplication.kt
app/src/main/java/com/smallllm/data/download/: DownloadRepository.kt  DownloadStatus.kt  DownloadWorker.kt
app/src/main/java/com/smallllm/data/model/: ModelAllowlist.kt  ModelRegistry.kt  ModelSpec.kt  RuntimeType.kt
app/src/main/java/com/smallllm/data/storage/: ModelStorage.kt
app/src/main/java/com/smallllm/di/: AppContainer.kt
app/src/main/java/com/smallllm/runtime/: LlmRuntime.kt  RuntimeFactory.kt  RuntimeOptions.kt
app/src/main/java/com/smallllm/runtime/litertlm/: LiteRtLmRuntime.kt
app/src/main/java/com/smallllm/runtime/llamacpp/: LlamaCppRuntime.kt
app/src/main/java/com/smallllm/ui/chat/: ChatScreen.kt  ChatViewModel.kt
app/src/main/java/com/smallllm/ui/components/: DownloadActions.kt
app/src/main/java/com/smallllm/ui/detail/: ModelDetailScreen.kt  ModelDetailViewModel.kt
app/src/main/java/com/smallllm/ui/gallery/: GalleryScreen.kt  GalleryViewModel.kt
app/src/main/java/com/smallllm/ui/navigation/: Destinations.kt  NavGraph.kt
app/src/main/java/com/smallllm/ui/theme/: Color.kt  Shapes.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/example/smallllm/: ExampleUnitTest.kt
docs/: ARCHITECTURE.md  ROADMAP.md  SPECS.md  smollm_research_report.html  smollm_research_report.md
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
llamacpp/: README.md  build.gradle.kts
llamacpp/src/main/cpp/: CMakeLists.txt  LLMInference.cpp  LLMInference.h  smollm.cpp
llamacpp/src/main/java/com/smallllm/llamacpp/: SmolLM.kt
